# FrameWise

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.demo  README.md  app.py  main.py  media.py  providers.py  pyproject.toml  render.yaml  requirements.txt  validation.py
.github/workflows/: docker-publish.yml
openspec/changes/add-container-output-test/: tasks.md
openspec/changes/add-docker-publish-workflow/: design.md  proposal.md  tasks.md
openspec/changes/add-gradio-demo-app/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-add-container-output-test/: design.md  proposal.md
openspec/changes/archive/2026-07-10-add-gradio-demo-app/: proposal.md  tasks.md
openspec/changes/archive/2026-07-10-logging-module-migration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-rename-to-framewise/: design.md  tasks.md
openspec/changes/reduce-demo-memory-footprint/: design.md  proposal.md  tasks.md
openspec/changes/rename-to-framewise/: proposal.md
openspec/changes/use-external-caption-service/: design.md  proposal.md  tasks.md
openspec/specs/container-output-test/: spec.md
openspec/specs/demo-web-app/: spec.md
openspec/specs/external-caption-provider/: spec.md
openspec/specs/pipeline-observability/: spec.md
openspec/specs/project-identity/: spec.md
presentation/: slides.md
tests/: run_e2e.py  test_contract.py  test_providers.py
tests/fixtures/: results_bad_extra_task.json  results_bad_malformed.json  results_bad_missing_style.json  results_good.json
(+9 files in other folders)
