[project]
name = "framewise"
version = "3.0.0"
requires-python = ">=3.10"
# Pure external captioning: no local model, no torch/GPU stack. The container
# calls a hosted vision model selected at runtime via CAPTION_PROVIDER.
dependencies = [
    "requests",
    "google-genai",
    "openai",
    "anthropic",
]

[project.optional-dependencies]
# Demo web app (app.py), not required by the graded container.
demo = [
    "gradio",
]
